infra/terraform/main.tf
terraform {
  required_version = ">= 1.8.0"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }

  backend "s3" {
    bucket       = "rugbylive-terraform-state"
    key          = "api/terraform.tfstate"
    region       = "eu-west-1"
    encrypt      = true
    use_lockfile = true
  }
}

provider "aws" {
  region = "eu-west-1"
}

resource "aws_eip" "api_ip" {
  instance = aws_instance.api.id
  domain   = "vpc"
}

resource "aws_ecr_repository" "api" {
  name = "rugbylive-api"
}
